2.0.5.1:
* Added auto-rejoin afer being kicked

2.0.5 (r1300) 2008-04-09:
* Added a Cayenne persistence layer to address database problems
* Added StatString test cases
* The 'renameaccount' command now picks up the case of the old account name
* The 'unban' command now infers the user namespace
* Fixed a bug where super-users couldn't use commands 
* Added more database editors
* Fixed a bug affecting 'kick' and 'ban' when searching for users
* Added 'votekick' 'voteban' and 'votecancel' commands
* Logs will be saved to log.txt by default
* Added a profile editor
* Fixed a bug with the chat splitter
* Added an 'allseen' command
* Fixed a bug where auto-promotions were case sensitive
* Remove stale users from the database

2.0.4.2 (r1237) 2008-04-01:
* Allow use of %keywords% and commands in anti-idles and with /say (Cause of issue 61)
* Nightly builds are now an update type! They are less stable than Alpha
* Removed the size restraint on the "What's New" window
* Added some error handling for conditions where BNI downloads fail
* Changed the auto-update algorithm to prevent failed download from breaking the jar
* Added a setting to disable the plug icon for DSHR/DRTL/SSHR/JSTR/STAR/SEXP/W2BN
* Improved the readability of trivia answers
* Separated the commands and keywords enable flags (Issue 61)

2.0.4.1 (r1182) 2008-03-19:
* Added warden support (special thanks to iago and Hdx)
  - Just drop Starcraft.exe in the bot folder!

2.0.4 Beta (r1174) 2008-03-17:
* Added DigitalText connection support
* Fixed a bug where having no connections would cause the GUI to never load
* Added tag to close the HTML table in HTMLOutputEventHandler (Issue 57)
* Introduced first pass at music controllers; not yet configurable or fully tested
  - OSX: iTunes (AppleScript)
  - Windows: iTunes (ActiveX), Winamp (JDIC-MPControl)
  - Linux (JDIC-MPControl): Rhythmbox, XMMS, GMusicBrowser
* Introduced first-pass SWT code to SVN